# DeversiFi_Project

./: CMakeLists.txt  README.md  TradingBot
inc/: DvfSimulator.h  market_bot.hpp  timer.hpp
src/: main.cpp  market_bot.cpp
test/: CMakeLists.txt  DvfSimulator_test.h  Test  TradingBot  test.cpp
